# FocusPods

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  dumpfile  fly.toml  index.htm  main.css  main.js  pyproject.toml  requirements.txt  wsgi.py
new-frontend/: app.js  index.html  styles.css
new-frontend/sign-in/: index.html
new-frontend/sign-up/: index.html
scripts/: db-up.sh  pod-up.sh
server/: __init__.py  app.py  config.py  focus_pods.py  forms.py  routes.py
server/lib/: DDL.py  models.py  old_DDL.py  test_data.txt
server/static/: app.js  invitation.js  loggedin.js  styles.css
server/templates/: base.html  createdroom.html  index.html  invitation.html  loggedin.html  loggedout.html  login.html  not_logged_in.html  room.html  rooms.html  signup.html  users.html
