[tool.poetry]
name = "focusapp"
version = "0.2.0"
description = ""
authors = ["Angel Hudgins <angel@angelh.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "==8.1.3"
flask = "==2.1.3"
flask-sqlalchemy = "==2.5.1"
gunicorn = "==20.1.0"
greenlet = "==1.1.2"
importlib-metadata = "==4.12.0"
itsdangerous = "==2.1.2"
jinja2 = "==3.1.2"
markupsafe = "==2.1.1"
psycopg2-binary = "==2.9.3"
sqlalchemy = "==1.4.39"
werkzeug = "==2.1.2"
zipp = "==3.8.1"
flask-wtf = "*"
python-dotenv = "*"
requests = "^2.28.1"
nose = "^1.3.7"


[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
